adl-frontend/src/test/resources/unit/unsupported/error/semantic/attributes/attr3.adl
//#SemanticError GroupId=ATTR ErrorId=TOO_BIG_VALUE line=5
// attribute declaration with too big value
primitive attributes.attr3 {
  attribute uint8_t attr = 
  259654676464646343446976767;
}
